@@ -1,0 +1,14 @@
+<h1 class="title">Welcome to Ubuntu 10.04</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li>Ubuntu is now being upgraded to version 10.04. This release is a long term support release, culminating two significant years of work. It will be supported for three years &mdash; until April, 2013.</li>
+	<!--<li>Version 10.04 is the first version of Ubuntu to feature xyz totally awesome new thing everyone will love</li>-->
+	<li>This upgrade process may take a while. Meanwhile, we would like to tell you about some new features you'll see when the upgrade is complete.</li>
+</ul>
+<p class="special"></p></div>
+
+</div>
+
+<img class="icon" src="icons/ubuntu-logo.png" alt="" />
